fix color contrast issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,20 @@
   padding: 0;
   background-color: #13349e;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 body {
+  line-height: 1.5;
+  text-align: left;
+  font-size: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -44,6 +57,8 @@ input::placeholder {
 }
 .btn {
   color: #f89827;
+  font-size: 1.5rem;
+  padding: 0.5rem 0.7rem;
   background: transparent;
   border-radius: 0;
   border: 2px solid #f89827;
